--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "@types/react-pdf": "^6.2.0",
     "typescript": "^4.9.3"
   }
 }
